--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@types/koa-json": "^2.0.23",
     "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
+    "@types/koa-static-server": "^1.5.3",
+    "@types/nedb": "^1.8.16",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "jsonschema": "^1.4.1",
     "koa": "^2.15.3",
@@ -24,8 +27,12 @@
     "koa-passport": "^6.0.0",
     "koa-router": "^12.0.1",
     "koa-static-folder": "^0.1.6",
+    "koa-static-server": "^1.5.2",
+    "mongodb": "^6.6.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "nedb": "^1.8.0",
+    "nedb-promises": "^6.2.3",
     "node-fetch": "^3.3.1",
     "passport-http": "^0.3.0",
     "sequelize": "^6.37.3"
