--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "test": "jest",
+   "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -38,12 +39,17 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/koa__cors": "^5.0.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-passport": "^6.0.3",
     "@types/mysql": "^2.15.26",
     "@types/node": "^20.10.0",
     "@types/passport-http": "^0.3.11",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.4",
     "tsx": "^4.7.1"
   }
 }
